# UniProjects

./: .gitignore  README.md
Ahk/: ChestOpener.ahk  RealmClicker.ahk  URIcodesave.ahk  WarframeMacro.ahk  copypaste.ahk
Ahk/Binary File formatter/: binaryfileformatter.ahk
Ahk/Hackathon Innova input/: in.ahk  in.txt  in2.txt
Ahk/URICodeSave/: URIcodesave.ahk
Ahk/numlocklock/: numlocklock.ahk
Algorithms/Aulas C1/: Aula_01-Aug.c  Aula_21-Nov.c  Aula_25-JUL.c  Aula_26-Sep (1).c  Aula_26-Sep (2).c  Aula_26-Sep (3).c  ListaHabib01.c  Prova C1.c  countword.c  out.txt  vetor.h
Algorithms/Projects/: Snake.rar
Algorithms/Testes/: AnimaConsole.c  MimAjuda.c  ProbaTest.c  calculadora.c  exemplo2.c  gera dor.c  help viviana.c  norettest.c  senoCalc.c  suaMae.c
Algorithms/URI/: 1001.c  1002.c  1003.c  1004.c  1005.c  1009.c  1010.c  1011.c  1016.C  1019.c  1021.c  1024.c  1028.cpp  1035.c  1036.c  1037.c  1039.c  1042.c  1043.c  1044.c  1045.c  1048.c  1049.c  1051.c  1064.c  1066.c  1070.c  1071.c  1072.c  1073.c  1074.c  1075.c  1078.c  1079.c  1080.c  1094.c  1095.c  1099.c  1116.c  1117.c  (+23 more)
Android/ListApp/: build.gradle
Arduino/BLINKA/: sketch_apr06a.ino
C++/OAC/MULTICYCLE_MIPS/: CMakeLists.txt
C++/OAC/MULTICYCLE_MIPS/src/Machine/: Machine.h  Processor.h
C++/OAC/MULTICYCLE_MIPS/src/Machine/Processor/BranchController/: BranchController.cpp  BranchController.h
C++/OAC/MULTICYCLE_MIPS/src/Machine/Processor/Multiplexer/: Multiplexer.h
C++/OAC/MULTICYCLE_MIPS/src/Machine/Processor/Register/: Register.cpp  Register.h
build-HelpMeLinkedList-Desktop_Qt_5_5_0_MinGW_32bit-Debug/: Makefile.Debug
(+1598 files in other folders)
